--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的博客</title>
-    <link rel="stylesheet" href="sitepage/styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+    <title>Markdown Viewer</title>
+    <!-- Include the marked library -->
     <script src="sitepage/header.js"></script>
-    <script src="sitepage/markdownLoader.js"></script>
+    <script src="sitepage/scripts.js"></script>
+    <link rel="stylesheet" href="sitepage/styles.css">
 </head>
 <body>
     <div id="header-container"></div>
-    <div id="content"></div>
-
-
-    <footer>
-        <p>版权所有 &copy; 2024</p>
-    </footer>
+    <div id="content">Loading...</div>
     
 </body>
 </html>
